<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorTest</string>
    <string name="title_sensor_detail">Sensor Detail</string>
    <string name="title_use_sensor">Use Sensor</string>
    <string name="sensor_detail_button_useSensor_txt">Use Sensor</string>
    <string name="calibrateSensor_Submit">Calibrate Sensor</string>
    <string name="collectSensorData_Submit">Collect Sensor Data</string>
    <string name="title_calibrate_sensor">Calibrate Sensor</string>
    <string name="title_measure_speed">Measure Speed (X axis)</string>
    <string name="title_measure_speed_use_location_sensor">Current Speed</string>
    <string name="speedText">Speed (kmph)</string>
    <string name="menu_measure_speed_settings">Settings</string>
    <string name="calculatedSpeedText">Calculated Speed (kmph)</string>
    
    <string name="enable_gps_dialog_title">GPS needs to be enabled</string>
    <string name="enable_gps_dialog_message">GPS needs to be enabled. Enable?</string>
    <string name="enable_gps_dialog_ok">OK</string>
    <string name="enable_gps_dialog_cancel">Back</string>
    
    <!-- Preferences and Settings -->
    <string name="title_pref_measure_speed">Speed Measurement Preferences</string>
    <string name="pref_measure_speed_time_interval_setting">Time Interval</string>
    <string name="pref_measure_speed_distance_setting">Distance</string>
    <string name="pref_measure_speed_show_map_setting">Show Path on Map</string>
    <string name="pref_measure_speed_show_map_setting_text_off">Off</string>
    <string name="pref_measure_speed_show_map_setting_text_on">On</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="green">#00FF00</color>
    <color name="orange">#FF6103</color>
    <color name="grey">#D3D3D3</color>

</resources>